# Deploiement_modele_scoring

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: cicd.yaml
data/: example_input.csv
database/: create_db.py
models/: expected_columns.json  imputer_columns.json  pipeline_lightgbm.pkl
src/: build_dataset.py
tests/: test_basic.py  test_endpoints.py  test_model_full_dataset.py
